test/01/E-01_expected.txt
1

13
ERROR
no matching function for call to 'Student::Student()'

In file included from /usr/include/c++/9.3.0/bits/stl_map.h:63,
                 from /usr/include/c++/9.3.0/map:61,
                 from E-01.cpp:1:
/usr/include/c++/9.3.0/tuple: In instantiation of 'std::pair<_T1, _T2>::pair(std::tuple<_Args1 ...>&, std::tuple<_Args2 ...>&, std::_Index_tuple<_Indexes1 ...>, std::_Index_tuple<_Indexes2 ...>) [with _Args1 = {int&&}; long unsigned int ..._Indexes1 = {0}; _Args2 = {}; long unsigned int ..._Indexes2 = {}; _T1 = const int; _T2 = Student]':
/usr/include/c++/9.3.0/tuple:1663:63:   required from 'std::pair<_T1, _T2>::pair(std::piecewise_construct_t, std::tuple<_Args1 ...>, std::tuple<_Args2 ...>) [with _Args1 = {int&&}; _Args2 = {}; _T1 = const int; _T2 = Student]'
/usr/include/c++/9.3.0/ext/new_allocator.h:147:4:   required from 'void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = std::pair<const int, Student>; _Args = {const std::piecewise_construct_t&, std::tuple<int&&>, std::tuple<>}; _Tp = std::_Rb_tree_node<std::pair<const int, Student> >]'
/usr/include/c++/9.3.0/bits/alloc_traits.h:484:4:   required from 'static void std::allocator_traits<std::allocator<_Tp1> >::construct(std::allocator_traits<std::allocator<_Tp1> >::allocator_type&, _Up*, _Args&& ...) [with _Up = std::pair<const int, Student>; _Args = {const std::piecewise_construct_t&, std::tuple<int&&>, std::tuple<>}; _Tp = std::_Rb_tree_node<std::pair<const int, Student> >; std::allocator_traits<std::allocator<_Tp1> >::allocator_type = std::allocator<std::_Rb_tree_node<std::pair<const int, Student> > >]'
/usr/include/c++/9.3.0/bits/stl_tree.h:614:32:   required from 'void std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_construct_node(std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Link_type, _Args&& ...) [with _Args = {const std::piecewise_construct_t&, std::tuple<int&&>, std::tuple<>}; _Key = int; _Val = std::pair<const int, Student>; _KeyOfValue = std::_Select1st<std::pair<const int, Student> >; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, Student> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Link_type = std::_Rb_tree_node<std::pair<const int, Student> >*]'
/usr/include/c++/9.3.0/bits/stl_tree.h:631:4:   required from 'std::_Rb_tree_node<_Val>* std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_create_node(_Args&& ...) [with _Args = {const std::piecewise_construct_t&, std::tuple<int&&>, std::tuple<>}; _Key = int; _Val = std::pair<const int, Student>; _KeyOfValue = std::_Select1st<std::pair<const int, Student> >; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, Student> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Link_type = std::_Rb_tree_node<std::pair<const int, Student> >*]'
/usr/include/c++/9.3.0/bits/stl_tree.h:2455:13:   required from 'std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_emplace_hint_unique(std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::const_iterator, _Args&& ...) [with _Args = {const std::piecewise_construct_t&, std::tuple<int&&>, std::tuple<>}; _Key = int; _Val = std::pair<const int, Student>; _KeyOfValue = std::_Select1st<std::pair<const int, Student> >; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, Student> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator = std::_Rb_tree_iterator<std::pair<const int, Student> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::const_iterator = std::_Rb_tree_const_iterator<std::pair<const int, Student> >]'
/usr/include/c++/9.3.0/bits/stl_map.h:518:8:   required from 'std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::operator[](std::map<_Key, _Tp, _Compare, _Alloc>::key_type&&) [with _Key = int; _Tp = Student; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, Student> >; std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type = Student; std::map<_Key, _Tp, _Compare, _Alloc>::key_type = int]'
E-01.cpp:13:7:   required from here
/usr/include/c++/9.3.0/tuple:1674:70: error: no matching function for call to 'Student::Student()'
 1674 |         second(std::forward<_Args2>(std::get<_Indexes2>(__tuple2))...)
      |                                                                      ^

E-01.cpp:5:2: note: candidate: 'Student::Student(int)'
    5 |  Student(int markParam)
      |  ^~~~~~~
E-01.cpp:5:2: note:   candidate expects 1 argument, 0 provided
E-01.cpp:3:7: note: candidate: 'constexpr Student::Student(const Student&)'
    3 | class Student {
      |       ^~~~~~~
E-01.cpp:3:7: note:   candidate expects 1 argument, 0 provided
E-01.cpp:3:7: note: candidate: 'constexpr Student::Student(Student&&)'
E-01.cpp:3:7: note:   candidate expects 1 argument, 0 provided

